# AtomUtils

./: .gitignore  LICENSE  README.md
.github/workflows/: build_OpenGLWrapper.yaml
Libraries/AppleMetalWrapper/: CMakeLists.txt  README.md
Libraries/AppleMetalWrapper/src/: AppleMetalWrapper.mm  shader.metal
Libraries/AppleMetalWrapper/src/shaders/: square.metal  triangle.metal
Libraries/OpenGLWrapper/: .gitignore  CMakeLists.txt  README.md
Libraries/OpenGLWrapper/include/: OpenGLWrapper.h
Libraries/OpenGLWrapper/src/: OpenGLWrapper.cpp
examples/OpenGLWrapper/: main.cpp
